--- a/conteudo/capitulo4.tex
+++ b/conteudo/capitulo4.tex
@@ -44,7 +44,7 @@ A Figura \ref{imgDiagramaNovo} representa o diagrama de classe de domínio propos
 	\caption{Diagrama de Domínio do Portal de Algoritmos Novo}
 	\includegraphics[width=15cm]{UML/diagrama-portal-novo.png}
 	\label{imgDiagramaNovo}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -56,7 +56,7 @@ A Tabela \ref{tbDescricaoTabelaPortalNovo} mostra as tabelas do banco de dados e
 	\caption{Tabelas do Banco de Dados do Portal de Algoritmos Novo}
 	\label{tbDescricaoTabelaPortalNovo}
 	\includegraphics[width=15cm]{UML/classes-de-dominios/2.png}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -78,7 +78,7 @@ A Tabela \ref{tbRequisitoFuncionais} mostra os requisitos funcionais do portal d
 	\caption{Requisitos funcionais}
 	\label{tbRequisitoFuncionais}
 	\includegraphics[width=15cm]{UML/requisitos/1.png}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -94,7 +94,7 @@ A Tabela \ref{tbRequisitosNaoFuncionais} são os requisitos não-funcionais do por
 	\caption{Requisitos não-funcionais}
 	\label{tbRequisitosNaoFuncionais}
 	\includegraphics[width=15cm]{UML/requisitos/2.png}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -114,7 +114,7 @@ Na Figura \ref{imgCasoUsoAdministrador} estão representados os casos de uso em q
 	\caption{Casos de Uso que envolvem o ator Administrador}
 	\includegraphics[width=15cm]{UML/casos-de-uso-administrador.jpg}
 	\label{imgCasoUsoAdministrador}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -127,7 +127,7 @@ Na Figura \ref{imgCasoUsoProfessor} estão representados os casos de uso em que o
 	\includegraphics[width=8cm]{UML/casos-de-uso-professor.jpg}
 	\label{imgCasoUsoProfessor}
 	\\
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -140,7 +140,7 @@ Na Figura \ref{imgCasoUsoAluno} estão representados os casos de uso em que o ato
 	\includegraphics[width=8cm]{UML/casos-de-uso-aluno.jpg}
 	\label{imgCasoUsoAluno}
 	\\
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -162,7 +162,7 @@ A Tabela \ref{imgManterUsuarios} descreve o caso de uso de manter o cadastro, ed
 	\caption{Caso de Uso Manter Usuários}
 	\includegraphics[width=15cm]{UML/casos-de-uso/1.png}
 	\label{imgManterUsuarios}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -178,7 +178,7 @@ A Tabela \ref{imgManterAlunos} descreve o caso de uso de manter o cadastro, ediç
 	\caption{Caso de Uso Manter Alunos}
 	\includegraphics[width=15cm]{UML/casos-de-uso/2.png}
 	\label{imgManterAlunos}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -194,7 +194,7 @@ A Tabela \ref{imgManterProfessores} descreve o caso de uso de manter o cadastro,
 	\caption{Caso de Uso Manter Professores}
 	\includegraphics[width=15cm]{UML/casos-de-uso/3.png}
 	\label{imgManterProfessores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -210,7 +210,7 @@ A Tabela \ref{imgManterAdministradores} descreve o caso de uso de manter o cadas
 	\caption{Caso de Uso Manter Administradores}
 	\includegraphics[width=15cm]{UML/casos-de-uso/4.png}
 	\label{imgManterAdministradores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -226,7 +226,7 @@ A Tabela \ref{imgManterTipoProblemas} descreve o caso de uso de manter o cadastr
 	\caption{Caso de Uso Manter Tipo de Problema}
 	\includegraphics[width=15cm]{UML/casos-de-uso/5.png}
 	\label{imgManterTipoProblemas}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -242,7 +242,7 @@ A Tabela \ref{imgManterProblemas} descreve o caso de uso de manter o cadastro, e
 	\caption{Caso de Uso Manter Problemas}
 	\includegraphics[width=15cm]{UML/casos-de-uso/6.png}
 	\label{imgManterProblemas}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -258,7 +258,7 @@ A Tabela \ref{imgManterPalavrasChaves} descreve o caso de uso de manter o cadast
 	\caption{Caso de Uso Manter Palavras-chave}
 	\includegraphics[width=15cm]{UML/casos-de-uso/7.png}
 	\label{imgManterPalavrasChaves}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -274,7 +274,7 @@ A Tabela \ref{imgManterEntradasSaidas} descreve o caso de uso de manter o cadast
 	\caption{Caso de Uso Manter Entrada e Saídas}
 	\includegraphics[width=15cm]{UML/casos-de-uso/8.png}
 	\label{imgManterEntradasSaidas}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -290,7 +290,7 @@ A Tabela \ref{imgManterSolucoesProblemas} descreve o caso de uso de manter o cad
 	\caption{Caso de Uso Manter Soluções de Problemas}
 	\includegraphics[width=15cm]{UML/casos-de-uso/9.png}
 	\label{imgManterSolucoesProblemas}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -306,7 +306,7 @@ A Tabela \ref{imgManterListaProblemas} descreve o caso de uso de manter o cadast
 	\caption{Caso de Uso Manter Listas de Problemas}
 	\includegraphics[width=15cm]{UML/casos-de-uso/10.png}
 	\label{imgManterListaProblemas}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -322,7 +322,7 @@ A Tabela \ref{imgManterInstituicoes} descreve o caso de uso de manter o cadastro
 	\caption{Caso de Uso Manter Instituições}
 	\includegraphics[width=15cm]{UML/casos-de-uso/11.png}
 	\label{imgManterInstituicoes}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -338,7 +338,7 @@ A Tabela \ref{imgManterGrupos} descreve o caso de uso de manter o cadastro, ediç
 	\caption{Caso de Uso Manter Grupos}
 	\includegraphics[width=15cm]{UML/casos-de-uso/12.png}
 	\label{imgManterGrupos}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -354,7 +354,7 @@ A Tabela \ref{imgManterPermissoes} descreve o caso de uso de manter o cadastro, 
 	\caption{Caso de Uso Manter Permissões}
 	\includegraphics[width=15cm]{UML/casos-de-uso/13.png}
 	\label{imgManterPermissoes}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -370,7 +370,7 @@ A Tabela \ref{imgManterGruposAdministradores} descreve o caso de uso de manter o
 	\caption{Caso de Uso Manter Grupos de Administradores}
 	\includegraphics[width=15cm]{UML/casos-de-uso/14.png}
 	\label{imgManterGruposAdministradores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -386,7 +386,7 @@ A Tabela \ref{imgManterPaises} descreve o caso de uso de manter  o cadastro, edi
 	\caption{Caso de Uso Manter Países}
 	\includegraphics[width=15cm]{UML/casos-de-uso/15.png}
 	\label{imgManterPaises}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -402,7 +402,7 @@ A Tabela \ref{imgManterEstados} descreve o caso de uso de manter  o cadastro, ed
 	\caption{Caso de Uso Manter Estados}
 	\includegraphics[width=15cm]{UML/casos-de-uso/16.png}
 	\label{imgManterEstados}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -418,7 +418,7 @@ A Tabela \ref{imgManterCidades} descreve o caso de uso de manter  o cadastro, ed
 	\caption{Caso de Uso Manter Cidades}
 	\includegraphics[width=15cm]{UML/casos-de-uso/17.png}
 	\label{imgManterCidades}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -434,7 +434,7 @@ A Tabela \ref{imgManterChat} descreve o caso de uso do \textit{chat online}, ele
 	\caption{Caso de Uso Chat Online}
 	\includegraphics[width=15cm]{UML/casos-de-uso/18.png}
 	\label{imgManterChat}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -450,7 +450,7 @@ A Tabela \ref{imgManterPerfil} descreve o caso de uso de cadastro, edição e remo
 	\caption{Caso de Uso Aluno Manter suas Informações Pessoais}
 	\includegraphics[width=15cm]{UML/casos-de-uso/19.png}
 	\label{imgManterPerfil}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{table}
 \FloatBarrier
 
@@ -484,7 +484,7 @@ A Figura \ref{mkCadastroAluno} é a interface gráfica de cadastro de um novo alun
 	\caption{Interface Gráfica de Cadastro de Aluno}
 	\includegraphics[width=15cm]{mockups/1.png}
 	\label{mkCadastroAluno}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -515,7 +515,7 @@ A Figura \ref{mkAutenticacao} é ainterface gráfica de autenticação.
 	\caption{Interface Gráfica de Autenticação}
 	\includegraphics[width=15cm]{mockups/5.png}
 	\label{mkAutenticacao}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -535,7 +535,7 @@ A Figura \ref{mkBoasVindasAdministrador} é ainterface gráfica de Boas Vindas do 
 	\caption{Interface Gráfica de Boas Vindas do Administrador e Professor}
 	\includegraphics[width=15cm]{mockups/3.png}
 	\label{mkBoasVindasAdministrador}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -553,7 +553,7 @@ A Figura \ref{mkListaProblemas} é a interface gráfica da listagem de problemas.
 	\caption{Interface Gráfica de Problemas}
 	\includegraphics[width=15cm]{mockups/6.png}
 	\label{mkListaProblemas}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -584,7 +584,7 @@ A Figura \ref{mkNovoTipoProblema} é a interface gráfica de listagem de tipos de 
 	\caption{Interface Gráfica de Listagem Tipos de Problemas}
 	\includegraphics[width=15cm]{mockups/7.png}
 	\label{mkNovoTipoProblema}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -602,7 +602,7 @@ A Figura \ref{mkNovoProblema} é a interface gráfica de cadastro e/ou edição de u
 	\caption{Interface Gráfica de Novo Problema}
 	\includegraphics[width=15cm]{mockups/8.png}
 	\label{mkNovoProblema}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -631,7 +631,7 @@ A Figura \ref{mkPalavrasChaves} é a interface gráfica de cadastro e/ou edição de
 	\caption{Interface Gráfica de Palavras Chaves}
 	\includegraphics[width=15cm]{mockups/9.png}
 	\label{mkPalavrasChaves}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -649,7 +649,7 @@ A Figura \ref{mkDadosTestes} é a interface gráfica de cadastro e/ou edição de da
 	\caption{Interface Gráfica de Dados de Testes}
 	\includegraphics[width=15cm]{mockups/10.png}
 	\label{mkDadosTestes}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -668,7 +668,7 @@ A Figura \ref{mkVisualizacaoSolucao1} é a interface gráfica de visualização de u
 	\caption{Interface Gráfica de Visualização de Solução do Problema}
 	\includegraphics[width=15cm]{mockups/11.png}
 	\label{mkVisualizacaoSolucao1}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 \newpage
@@ -683,7 +683,7 @@ A Figura \ref{mkListaGrupos} é a interface gráfica de listagem dos grupos ja cad
 	\caption{Interface Gráfica de Grupos}
 	\includegraphics[width=15cm]{mockups/12.png}
 	\label{mkListaGrupos}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -712,7 +712,7 @@ A Figura \ref{mkCadastroGrupo} é a interface gráfica de cadastro e edição de um 
 	\caption{Interface Gráfica de Cadastro de Grupo}
 	\includegraphics[width=15cm]{mockups/13.png}
 	\label{mkCadastroGrupo}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -739,7 +739,7 @@ A Figura \ref{mkParticipantes} é a interface gráfica de associação de participan
 	\caption{Interface Gráfica de Cadastro de Participantes no Grupo}
 	\includegraphics[width=15cm]{mockups/14.png}
 	\label{mkParticipantes}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -757,7 +757,7 @@ A Figura \ref{mkGrupoListaProblemas} é a interface gráfica de associação de list
 	\caption{Interface Gráfica de Cadastro de Lista de Problemas no Grupo}
 	\includegraphics[width=15cm]{mockups/15.png}
 	\label{mkGrupoListaProblemas}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -775,7 +775,7 @@ A Figura \ref{mkListaAlunos} é a interface gráfica da listagem de alunos.
 	\caption{Interface Gráfica de Listagem de Alunos}
 	\includegraphics[width=15cm]{mockups/17.png}
 	\label{mkListaAlunos}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -800,7 +800,7 @@ A Figura \ref{mkCadastroAlunoAdmin} é a interface gráfica do cadastro e edição d
 	\caption{Interface Gráfica de Cadastro de Alunos}
 	\includegraphics[width=15cm]{mockups/38.png}
 	\label{mkCadastroAlunoAdmin}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -818,7 +818,7 @@ A Figura \ref{mkListaProblemasListagem} é a interface da listagem de listas de p
 	\caption{Interface Gráfica de Lista de Problemas}
 	\includegraphics[width=15cm]{mockups/23.png}
 	\label{mkListaProblemasListagem}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -844,7 +844,7 @@ A Figura \ref{mkCadastroListaProblemas} é a interface de cadastro e edição de li
 	\caption{Interface Gráfica de Cadastro e Edição de Lista de Problemas}
 	\includegraphics[width=15cm]{mockups/25.png}
 	\label{mkCadastroListaProblemas}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -862,7 +862,7 @@ A Figura \ref{mkListaUsuario} é a interface gráfica da listagem dos usuários. Es
 	\caption{Interface Gráfica de Lista de Usuários}
 	\includegraphics[width=15cm]{mockups/36.png}
 	\label{mkListaUsuario}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -887,7 +887,7 @@ A Figura \ref{mkCadastroUsuario} é a interface gráfica do cadastro e edição dos 
 	\caption{Interface Gráfica de Cadastro e Edição de Usuários}
 	\includegraphics[width=15cm]{mockups/37.png}
 	\label{mkCadastroUsuario}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -905,7 +905,7 @@ A Figura \ref{mkListaProfessores} é a interface gráfica da listagem dos professo
 	\caption{Interface Gráfica de Lista de Professores}
 	\includegraphics[width=15cm]{mockups/28.png}
 	\label{mkListaProfessores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -930,7 +930,7 @@ A Figura \ref{mkCadastroProfessores} é a interface gráfica do cadastro e edição 
 	\caption{Interface Gráfica de Cadastro e Edição de Professores}
 	\includegraphics[width=15cm]{mockups/29.png}
 	\label{mkCadastroProfessores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -948,7 +948,7 @@ A Figura \ref{mkListaInstituicao} é a interface gráfica da listagem das Institui
 	\caption{Interface Gráfica de Lista de Instituições}
 	\includegraphics[width=15cm]{mockups/30.png}
 	\label{mkListaInstituicao}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -973,7 +973,7 @@ A Figura \ref{mkCadastroInstituicao} é a interface gráfica do cadastro e edição 
 	\caption{Interface Gráfica de Cadastro e Edição de Instituições}
 	\includegraphics[width=15cm]{mockups/31.png}
 	\label{mkCadastroInstituicao}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -991,7 +991,7 @@ A Figura \ref{mkListaInstituicao} é a interface gráfica da listagem das Permissõ
 	\caption{Interface Gráfica de Lista de Permissões}
 	\includegraphics[width=15cm]{mockups/32.png}
 	\label{mkListaPermissao}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1020,7 +1020,7 @@ A Figura \ref{mkCadastroPermissao} é a interface gráfica do cadastro e edição de
 	\caption{Interface Gráfica de Cadastro e Edição de Permissões}
 	\includegraphics[width=15cm]{mockups/33.png}
 	\label{mkCadastroPermissao}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1038,7 +1038,7 @@ A Figura \ref{mkListaGrupoAdministradores} é a interface gráfica da listagem das
 	\caption{Interface Gráfica de Lista de Grupos de Administradores}
 	\includegraphics[width=15cm]{mockups/26.png}
 	\label{mkListaGrupoAdministradores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1063,7 +1063,7 @@ A Figura \ref{mkCadastroGrupoAdministradores} é a interface gráfica do cadastro 
 	\caption{Interface Gráfica de Cadastro e Edição de Grupos de Administradores}
 	\includegraphics[width=15cm]{mockups/27.png}
 	\label{mkCadastroGrupoAdministradores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1081,7 +1081,7 @@ A Figura \ref{mkListaPaises} é a interface gráfica da listagem de países, estado
 	\caption{Interface Gráfica de Listagem de Países, Estados e Cidades}
 	\includegraphics[width=15cm]{mockups/19.png}
 	\label{mkListaPaises}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1112,7 +1112,7 @@ A Figura \ref{mkCadastroPais} é a interface gráfica do cadastro e edição de um P
 	\caption{Interface Gráfica de Cadastro e Edição de País}
 	\includegraphics[width=15cm]{mockups/20.png}
 	\label{mkCadastroPais}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1130,7 +1130,7 @@ A Figura \ref{mkCadastroEstado} é a interface gráfica do cadastro e edição de um
 	\caption{Interface Gráfica de Cadastro e Edição de Estado}
 	\includegraphics[width=15cm]{mockups/21.png}
 	\label{mkCadastroEstado}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1148,7 +1148,7 @@ A Figura \ref{mkCadastroEstado} é a interface gráfica do cadastro e edição de um
 	\caption{Interface Gráfica de Cadastro e Edição de Cidade}
 	\includegraphics[width=15cm]{mockups/22.png}
 	\label{mkCadastroCidade}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1162,6 +1162,8 @@ Nesta seção foram apresentados todos os protótipos de interfaces gráficas, a seg
 
 Diagramas de Robustez tem por objetivo demonstrar a ligação dos casos de uso com as interfaces gráficas e classes de domínio dentro do contexto da modelagem do \textit{software}.
 
+\newpage
+
 \subsection{Cadastro de Aluno}
 
 A Figura \ref{rbRegistroAluno} demonstra as associações das classes de domínio na interface gráfica da Figura \ref{mkCadastroAluno}.
@@ -1172,7 +1174,7 @@ A Figura \ref{rbRegistroAluno} demonstra as associações das classes de domínio n
 	\caption{Diagrama de Robustez de Cadastro de Aluno}
 	\includegraphics[width=15cm]{UML/robustez/1.png}
 	\label{rbRegistroAluno}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1186,7 +1188,7 @@ A Figura \ref{rbAutenticacao} demonstra as associações das classes de domínio na
 	\caption{Diagrama de Robustez de Autenticação}
 	\includegraphics[width=15cm]{UML/robustez/2.png}
 	\label{rbAutenticacao}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1202,7 +1204,7 @@ A Figura \ref{rbRecuperacaoSenha} demonstra as associações das classes de domíni
 	\caption{Diagrama de Robustez de Recuperação de Senha}
 	\includegraphics[width=15cm]{UML/robustez/3.png}
 	\label{rbRecuperacaoSenha}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1216,7 +1218,7 @@ A Figura \ref{rbBoasVindasAluno} demonstra as associações das classes de domínio
 	\caption{Diagrama de Robustez de Boas Vindas do Aluno}
 	\includegraphics[width=15cm]{UML/robustez/4.png}
 	\label{rbBoasVindasAluno}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1232,7 +1234,7 @@ A Figura \ref{rbBoasVindasAdministrador} demonstra as associações das classes de
 	\caption{Diagrama de Robustez de Boas Vindas Administrador}
 	\includegraphics[width=15cm]{UML/robustez/5.png}
 	\label{rbBoasVindasAdministrador}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1246,7 +1248,7 @@ A Figura \ref{rbProblemas} demonstra as associações das classes de domínio na in
 	\caption{Diagrama de Robustez de Problemas}
 	\includegraphics[width=15cm]{UML/robustez/6.png}
 	\label{rbProblemas}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1260,7 +1262,7 @@ A Figura \ref{rbTipoProblema} demonstra as associações das classes de domínio na
 	\caption{Diagrama de Robustez de Tipo de Problema}
 	\includegraphics[width=15cm]{UML/robustez/7.png}
 	\label{rbTipoProblema}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1274,7 +1276,7 @@ A Figura \ref{rbCadastroProblema} demonstra as associações das classes de domíni
 	\caption{Diagrama de Robustez de Cadastro e Edição de Problema}
 	\includegraphics[width=15cm]{UML/robustez/8.png}
 	\label{rbCadastroProblema}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1290,7 +1292,7 @@ A Figura \ref{rbPalavraChave} demonstra as associações das classes de domínio na
 	\caption{Diagrama de Robustez de Palavras-chave}
 	\includegraphics[width=15cm]{UML/robustez/9.png}
 	\label{rbPalavraChave}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1304,7 +1306,7 @@ A Figura \ref{rbDadosTestes} demonstra as associações das classes de domínio na 
 	\caption{Diagrama de Robustez de Dados de Testes}
 	\includegraphics[width=15cm]{UML/robustez/10.png}
 	\label{rbDadosTestes}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1320,7 +1322,7 @@ A Figura \ref{rbVisualizacaoSolucao1} demonstra as associações das classes de do
 	\caption{Diagrama de Robustez de Visualização de Solução partindo da listagem de Problemas}
 	\includegraphics[width=15cm]{UML/robustez/11.png}
 	\label{rbVisualizacaoSolucao1}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1334,7 +1336,7 @@ A Figura \ref{rbListaGrupos} demonstra as associações das classes de domínio na 
 	\caption{Diagrama de Robustez de Lista de Grupos}
 	\includegraphics[width=15cm, height=8.5cm]{UML/robustez/12.png}
 	\label{rbListaGrupos}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1350,7 +1352,7 @@ A Figura \ref{rbCadastroGrupo} demonstra as associações das classes de domínio n
 	\caption{Diagrama de Robustez de Cadastro e Edição de Grupo}
 	\includegraphics[width=15cm]{UML/robustez/13.png}
 	\label{rbCadastroGrupo}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1364,7 +1366,7 @@ A Figura \ref{rbVisualizacaoSolucao2} demonstra as associações das classes de do
 	\caption{Diagrama de Robustez de Adicionar Participantes}
 	\includegraphics[width=15cm]{UML/robustez/14.png}
 	\label{rbVisualizacaoSolucao2}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1380,7 +1382,7 @@ A Figura \ref{rbListaProblema} demonstra as associações das classes de domínio n
 	\caption{Diagrama de Robustez de Adicionar Lista de Problemas}
 	\includegraphics[width=15cm]{UML/robustez/15.png}
 	\label{rbListaProblema}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1394,7 +1396,7 @@ A Figura \ref{rbVisualizacaoSolucao3} demonstra as associações das classes de do
 	\caption{Diagrama de Robustez de Visualização de Solução partindo da listagem de Grupos}
 	\includegraphics[width=15cm]{UML/robustez/16.png}
 	\label{rbVisualizacaoSolucao3}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1410,7 +1412,7 @@ A Figura \ref{rbListaAlunos} demonstra as associações das classes de domínio na 
 	\caption{Diagrama de Robustez de Lista de Alunos}
 	\includegraphics[width=15cm]{UML/robustez/17.png}
 	\label{rbListaAlunos}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1426,7 +1428,7 @@ A Figura \ref{rbCadastroAlunoAdministrador} demonstra as associações das classes
 	\caption{Diagrama de Robustez de Cadastro de Alunos pelo Administrador}
 	\includegraphics[width=15cm]{UML/robustez/18.png}
 	\label{rbCadastroAlunoAdministrador}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1440,7 +1442,7 @@ A Figura \ref{rbVisualizacaoSolucao4} demonstra as associações das classes de do
 	\caption{Diagrama de Robustez de Visualização de Solução partindo da listagem de Alunos}
 	\includegraphics[width=15cm]{UML/robustez/19.png}
 	\label{rbVisualizacaoSolucao4}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1456,7 +1458,7 @@ A Figura \ref{rbListaProblemas} demonstra as associações das classes de domínio 
 	\caption{Diagrama de Robustez de Lista de Problemas}
 	\includegraphics[width=15cm]{UML/robustez/20.png}
 	\label{rbListaProblemas}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1472,7 +1474,7 @@ A Figura \ref{rbCadastroListaProblemas} demonstra as associações das classes de 
 	\caption{Diagrama de Robustez de Cadastro e Edição de Lista de Problemas}
 	\includegraphics[width=15cm]{UML/robustez/21.png}
 	\label{rbCadastroListaProblemas}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1486,7 +1488,7 @@ A Figura \ref{rbVisualizacaoSolucao5} demonstra as associações das classes de do
 	\caption{Diagrama de Robustez de Visualização de Solução partindo da listagem de Listas de Problemas}
 	\includegraphics[width=15cm]{UML/robustez/22.png}
 	\label{rbVisualizacaoSolucao5}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1502,7 +1504,7 @@ A Figura \ref{rbListaUsuarios} demonstra as associações das classes de domínio n
 	\caption{Diagrama de Robustez de Lista de Usuários}
 	\includegraphics[width=15cm]{UML/robustez/23.png}
 	\label{rbListaUsuarios}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1516,7 +1518,7 @@ A Figura \ref{rbCadastroUsuarios} demonstra as associações das classes de domíni
 	\caption{Diagrama de Robustez de Cadastro e Edição de Usuários}
 	\includegraphics[width=15cm]{UML/robustez/24.png}
 	\label{rbCadastroUsuarios}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1532,7 +1534,7 @@ A Figura \ref{rbListaAdministradores} demonstra as associações das classes de do
 	\caption{Diagrama de Robustez de Lista de Administradores}
 	\includegraphics[width=15cm]{UML/robustez/25.png}
 	\label{rbListaAdministradores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1546,7 +1548,7 @@ A Figura \ref{rbCadastroAdministradores} demonstra as associações das classes de
 	\caption{Diagrama de Robustez de Cadastro e Edição de Administradores}
 	\includegraphics[width=15cm]{UML/robustez/26.png}
 	\label{rbCadastroAdministradores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1560,7 +1562,7 @@ A Figura \ref{rbListaProfessores} demonstra as associações das classes de domíni
 	\caption{Diagrama de Robustez de Lista de Professores}
 	\includegraphics[width=15cm]{UML/robustez/27.png}
 	\label{rbListaProfessores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1574,7 +1576,7 @@ A Figura \ref{rbCadastroProfessores} demonstra as associações das classes de dom
 	\caption{Diagrama de Robustez de Cadastro e Edição de Professores}
 	\includegraphics[width=15cm]{UML/robustez/28.png}
 	\label{rbCadastroProfessores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1590,7 +1592,7 @@ A Figura \ref{rbListaInstituicao} demonstra as associações das classes de domíni
 	\caption{Diagrama de Robustez de Lista de Instituições}
 	\includegraphics[width=15cm]{UML/robustez/29.png}
 	\label{rbListaInstituicao}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1604,7 +1606,7 @@ A Figura \ref{rbCadastroInstituicao} demonstra as associações das classes de dom
 	\caption{Diagrama de Robustez de Cadastro e Edição de Instituições}
 	\includegraphics[width=15cm]{UML/robustez/30.png}
 	\label{rbCadastroInstituicao}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1620,7 +1622,7 @@ A Figura \ref{rbListaPermissoes} demonstra as associações das classes de domínio
 	\caption{Diagrama de Robustez de Lista de Permissões}
 	\includegraphics[width=15cm]{UML/robustez/31.png}
 	\label{rbListaPermissoes}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1634,7 +1636,7 @@ A Figura \ref{rbCadastroPermissoes} demonstra as associações das classes de domí
 	\caption{Diagrama de Robustez de Cadastro e Edição de Permissões}
 	\includegraphics[width=15cm]{UML/robustez/32.png}
 	\label{rbCadastroPermissoes}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1650,7 +1652,7 @@ A Figura \ref{rbListaGruposAdministradores} demonstra as associações das classes
 	\caption{Diagrama de Robustez de Lista de Grupos de Administradores}
 	\includegraphics[width=15cm]{UML/robustez/33.png}
 	\label{rbListaGruposAdministradores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1664,7 +1666,7 @@ A Figura \ref{CadastroGruposAdministradores} demonstra as associações das classe
 	\caption{Diagrama de Robustez de Cadastro e Edição de Grupos de Administradores}
 	\includegraphics[width=15cm]{UML/robustez/34.png}
 	\label{CadastroGruposAdministradores}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1680,7 +1682,7 @@ A Figura \ref{rbListaPaises} demonstra as associações das classes de domínio na 
 	\caption{Diagrama de Robustez de Lista de Países, Estados e Cidades}
 	\includegraphics[width=15cm]{UML/robustez/35.png}
 	\label{rbListaPaises}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1694,7 +1696,7 @@ A Figura \ref{rbCadastriPais} demonstra as associações das classes de domínio na
 	\caption{Diagrama de Robustez de Cadastro e Edição de País}
 	\includegraphics[width=15cm]{UML/robustez/36.png}
 	\label{rbCadastriPais}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1710,7 +1712,7 @@ A Figura \ref{rbCadastroEstado} demonstra as associações das classes de domínio 
 	\caption{Diagrama de Robustez de Cadastro e Edição de Estado}
 	\includegraphics[width=15cm]{UML/robustez/37.png}
 	\label{rbCadastroEstado}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1724,7 +1726,7 @@ A Figura \ref{rbCadastroCidade} demonstra as associações das classes de domínio 
 	\caption{Diagrama de Robustez de Cadastro e Edição de Cidade}
 	\includegraphics[width=15cm, height=8cm]{UML/robustez/38.png}
 	\label{rbCadastroCidade}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1740,7 +1742,7 @@ A Figura \ref{sqCadastro} demonstra o fluxo de cadastro de um novo problema. O a
 	\caption{Diagrama de Sequência de Cadastro e Edição de Problemas}
 	\includegraphics[width=15cm]{UML/sequencia/1.png}
 	\label{sqCadastro}
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
@@ -1759,7 +1761,7 @@ Para o desenvolvimento da evolução do portal de algoritmos foi definido utilizar
 	\includegraphics[width=7cm]{imagens/arquitetura.png}
 	\label{imgArquitetura}
 	\\
-	Fonte: (AUTOR, 2015)
+	Fonte: (AUTOR, 2018)
 \end{figure}
 \FloatBarrier
 
