--- a/tcc.tex
+++ b/tcc.tex
@@ -96,9 +96,7 @@
 \vfill
 
 \begin{center}
-Evolução da Ferramenta de Gerenciamento do Portal de Algoritmos da UCS por Adriano Margarin
-	
-%\{\setlength{\unitlength}{1cm}\makebox(12,6.5){\parbox[c]{18cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm\LARGE{\bf\\\large Evolução da Ferramenta de Gerenciamento do Portal de Algoritmos da UCS}\par \normalsize por\par \large Adriano Margarin\par}}}
+{\setlength{\unitlength}{1cm}\makebox(12,6.5){\parbox[c]{18cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm\LARGE{\bf\\\large Evolução da Ferramenta de Gerenciamento do Portal de Algoritmos da Universidade de Caxias do Sul}\par \normalsize por\par \large Adriano Margarin\par}}}
 \end{center}
 
 {\large Trabalho de Conclusão de Curso submetido ao curso de Bacharelado em Sistemas de Informação do Centro de Ciências Exatas e da Tecnologia da Universidade de Caxias do Sul, como requisito obrigatório para graduação.}
@@ -123,7 +121,7 @@ Banca examinadora:\par
 
 \vfill
 
-\hfill{\setlength{\unitlength}{1cm}\makebox(9,2.5){\parbox[c]{9cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm Trabalho de Conclusão de Curso apresentado em\\ 9 de Dezembro de 2015\par Daniel Luís Notari\\ Coordenador}}}
+\hfill{\setlength{\unitlength}{1cm}\makebox(9,2.5){\parbox[c]{9cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm Trabalho de Conclusão de Curso apresentado em\\ 21 de Junho de 2018\par André Gustavo Adami\\ Coordenador}}}
 
 \end{singlespace}
 
@@ -131,9 +129,9 @@ Banca examinadora:\par
 
 \begin{dedicatoria}
 \sffamily\itshape
-``Não é preciso fazer coisas extraordinárias para obter resultados extraordinários."
+"A vida não é fácil e ninguém disse que seria."
 
-\textsc{Warren Buffet}
+\textsc{Autor Desconhecido}
 \end{dedicatoria}
 
 \begin{agradecimentos}
