--- a/conteudo/capitulo7.tex
+++ b/conteudo/capitulo7.tex
@@ -1,1 +1,6 @@
-\chapter{Capítulo 7}\label{cpCapitulo7}
+\appendix
+
+\chapter{Documentação}\label{Documentacao}
+
+
+Incluir Documentação nesse apêndice
