--- a/tcc.tex
+++ b/tcc.tex
@@ -96,7 +96,7 @@
 \vfill
 
 \begin{center}
-{\setlength{\unitlength}{1cm}\makebox(12,6.5){\parbox[c]{18cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm\LARGE{\bf\\\large Evolução da Ferramenta de Gerenciamento do Portal de Algoritmos da Universidade de Caxias do Sul}\par \normalsize por\par \large Adriano Margarin\par}}}
+{\setlength{\unitlength}{1cm}\makebox(12,6.5){\parbox[c]{12cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm\LARGE{\bf Evolução da Ferramenta de Gerenciamento do Portal de Algoritmos da Universidade de Caxias do Sul}\par \normalsize por\par \large Adriano Margarin\par}}}
 \end{center}
 
 {\large Trabalho de Conclusão de Curso submetido ao curso de Bacharelado em Sistemas de Informação do Centro de Ciências Exatas e da Tecnologia da Universidade de Caxias do Sul, como requisito obrigatório para graduação.}
@@ -216,5 +216,7 @@ The development of the solution will be done by the unification of the technolog
 
 \bibliography{tcc}
 \bibliographystyle{abnt}
+
+\include{conteudo/capitulo7}
 
 \end{document}
