--- a/conteudo/capitulo6.tex
+++ b/conteudo/capitulo6.tex
@@ -1,35 +1,11 @@
 \chapter{Considerações Finais}\label{cpConsideracoesParciais}
 
-No presente trabalho foi realizado o levantamento da situação atual do portal de algoritmos, reengenharia e modelagem. Para que seja viável a evolução foi preciso ser feito o levantamento de requisitos, engenharia, casos de uso, diagramas relacionados e prototipação de telas.
+O novo \textit{software} foi desenvolvido utilizando tecnologias de ponta, como \textit{Java} na última versão estável, \textit{AngulaJS} na versão mais recente estável e um \textit{framework} de \ac{CSS} fácil de utilizar.
 
-Cada etapa descrita acima foi desenvolvida utilizando metodologias da engenharia de software, as interfaces gráficas foram desenhadas buscando o melhor caso de usabilidade, a fim de facilitar seu uso.
+Com a nova arquitetura do \textit{software} ficou mais fácil e rápido de implementar novas funcionalidades conforme as necessidades forem surgindo. A arquiteruta engloba uma \ac{API} \ac{REST} fácil de integrar e configurar.
 
-Algumas dificuldades foram encontradas durante o desenvolvimento do presente trabalho, como a limitação de execução do portal de algoritmos em apenas um navegador de \textit{internet}. Desconhecimento das tecnologias utilizadas resultaram em um tempo maior para o entendimento de suas funcionalidades e sua arquitetura.
+A interface gráfica ficou mais amigável e intuitiva para o usuário, utilizando padrões de telas, botões, listagem e cadastros em geral.
 
-Para continuarmos com a evolução do portal de algoritmos é preciso seguir o cronograma abaixo.
+Com um banco de dados atual o \textit{software} está mais confiável no armazenamento das informações cadastrais, com essa atualização estamos garantindo integridade e segurança nas informações armazenadas nele.
 
-\begin{enumerate}
-	\item Configuração do ambiente de desenvolvimento.
-	\item Criação da arquitetura do portal de algoritmos.
-	\item Migração das tabelas do banco de dados.
-	\item Criação dos \ac{DAO}.
-	\item Desenvolvimento da \ac{API} \ac{REST}.
-	\item Desenvolvimento das interface gráficas.
-	\item Configuração do servidor de aplicação;
-	\item Implantação
-	\item Criação de relatórios.
-	\item Redação da monografia.
-\end{enumerate}
-
-\FloatBarrier
-\begin{table}[!htb]
-	\centering
-	\caption{Cronograma TCC 2}
-	\vspace{0.5cm}
-	\includegraphics[width=15cm]{imagens/cronograma.png}
-	\label{imgCronograma}
-	Fonte (AUTOR, 2018)
-\end{table}
-\FloatBarrier
-
-A figura \ref{imgCronograma} demonstra a grade do cronograma para o Trabalho de Conclusão de Curso 2.
+Com a implementação do novo gerenciador do portal de algoritmos concluimos que foi construido um \textit{software} robusto, organizado, com alta qualidade de código e de fácil entendimento sobre o que ele foi proposto.
