--- a/tcc.bib
+++ b/tcc.bib
@@ -199,3 +199,30 @@
 	address = {Caxias do Sul, RS},
 	pages   = {76}
 }
+
+@online{OwaspMainInTheMiddle,
+	author    = {Owasp},
+	title     = {Main in the Middle},
+	publisher = {},
+	year      = {2015},
+	note      = {$<$Disponível em: \url{https://www.owasp.org/index.php/Man-in-the-middle_attack}$>$. Acesso em: 3 de Junho de 2018}
+}
+
+@online{OwaspSQLInjection,
+author    = {Owasp},
+title     = {SQL Injection},
+publisher = {},
+year      = {2016},
+note      = {$<$Disponível em: \url{https://www.owasp.org/index.php/SQL_Injection}$>$. Acesso em: 3 de Junho de 2018}
+}
+
+@online{LetsEncrypt,
+author    = {Let's Encrypt},
+title     = {Let's Encrypt},
+publisher = {},
+year      = {2018},
+note      = {$<$Disponível em: \url{https://letsencrypt.org/about/}$>$. Acesso em: 3 de Junho de 2018}
+}
+
+
+
