--- a/tcc.tex
+++ b/tcc.tex
@@ -1,5 +1,7 @@
 \documentclass{iiufrgs}
 \usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage{graphicx}
 \usepackage[section]{placeins}
 \usepackage{setspace}
@@ -160,8 +162,10 @@ A todos vocês, minha sincera gratidão.
 \acro{CCET}[{CCET}]{Centro de Ciências Exatas e da Tecnologia}
 \acro{DAO}[{\textit{DAO}}]{\textit{Data Access Object}}
 \acrodefplural{DAO}[{\textit{DAOs}}]{\textit{Data Access Object}}
-\acro{HTML}[{\textit{HTML}}]{\textit{HyperText Markup Language}}
-\acro{HTTP}[\textit{HTTP}]{\textit{Hypertext Transfer Protocol}}
+\acro{HTML}[{\textit{HTML}}]{\textit{Hyper Text Markup Language}}
+\acro{HTTP}[\textit{HTTP}]{\textit{Hyper Text Transfer Protocol}}
+\acro{HTTPS}[\textit{HTTPS}]{\textit{Hyper Text Transfer Protocol Secure}}
+\acro{SSL}[\textit{SSl}]{\textit{Secure Socket Layer}}
 \acro{IHC}[{\textit{IHC}}]{Interação humano-computador}
 \acro{JAR}[\textit{JAR}]{\textit{Java Archive}}
 \acro{JAVA EE}[{\textit{JAVA EE}}]{\textit{Java Enterprise Edition}}
@@ -174,6 +178,8 @@ A todos vocês, minha sincera gratidão.
 \acro{UCS}[{UCS}]{Universidade de Caxias do Sul}
 \acro{UML}[\textit{UML}]{\textit{Unified Modeling Language}}
 \acro{WWW}[{\textit{WWW}}]{\textit{World Wide Web}}
+\acro{TCP}[{\textit{TCP}}]{\textit{Transmission Control Protocol}}
+\acro{CSS}[{\textit{CSS}}]{\textit{Cascading Style Sheets}}
 \end{acronym}
 
 \listoffigures
